fixed layout issue

--- a/src/styles/Create.module.css
+++ b/src/styles/Create.module.css
@@ -12,7 +12,6 @@
   justify-content: center;
   position: relative;
   top: 15vmin;
-  flex: 1;
 }
 
 .createCard {
