--- a/src/styles/SideBar.module.css
+++ b/src/styles/SideBar.module.css
@@ -15,6 +15,6 @@
 
 @media screen and (max-width:760px) {
   .mainDiv {
-    top: 18vmin;
+    top: 19.4vmin;
   }
 }
